hackathon-todo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hackathon-todo
  labels:
    app.kubernetes.io/name: hackathon-todo
    app.kubernetes.io/part-of: hackathon-todo
